# ChatBackend

./: .gitignore  SECURITY_FIXES.md  all_code.py.txt  merge_py.py  pyproject.toml  tree_ascii.py
alembic/: env.py
alembic/versions/: 5a993c932f3c_delete_username_add_email_nickname_to_.py  9c3667da8f80_init.py  cc1d59af787f_add_usersession_table.py
server/: app.py  db_init.py
server/api/: deps.py
server/api/routers/: auth.py  root.py  services.py  ws.py
server/db/: engine.py
server/db/models/: session.py  twitch_data.py  user.py
server/db/schemas/: user.py
server/runtime/: bus.py  hub.py  lifespan.py  registry.py
server/runtime/workers/: demo_worker.py  twitch_irc_worker.py  workers_protocol.py
server/utils/: hashing.py
